kubernetes/system/monitoring/grafana-lgtm/base/httproute.yaml
apiVersion: gateway.networking.k8s.io/v1beta1
kind: HTTPRoute
metadata:
  name: grafana-route
spec:
  parentRefs:
    - name: system-gateway
      namespace: default
  hostnames:
    - grafana.ninebasetwo.net
  rules:
    - matches:
        - path:
            type: PathPrefix
            value: "/"
      backendRefs:
        - name: lgtm-distributed-grafana
          port: 80
