kubernetes/system/monitoring/grafana-lgtm/base/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: k6-internal-ingress
  namespace: monitoring
  annotations:
    lbipam.cilium.io/ips: 192.168.2.47
    ingress.cilium.io/loadbalancer-mode: dedicated
spec:
  ingressClassName: cilium 
  rules:
  - http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: lgtm-distributed-mimir-nginx
            port:
              number: 80
